source code translation

--- a/src/lang/de/generic.json
+++ b/src/lang/de/generic.json
@@ -1,5 +1,6 @@
 {
   "home": "Startseite",
   "guides": "Leitfäden",
-  "about": "Über das Projekt"
+  "about": "Über das Projekt",
+  "sourceCode": "Quellcode"
 }
