chore(data): marked Jean in todo list

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -15,7 +15,7 @@ List of characters that require data gathering (except for story lines)
 - [x] Ganyu
 - [ ] Gorou
 - [ ] Hu Tao
-- [ ] Jean
+- [x] Jean
 - [x] Kaedehara Kazuha
 - [ ] Kaeya
 - [x] Kamisato Ayaka
