feat(data): added Mona

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -24,7 +24,7 @@ List of characters that require data gathering (except for story lines)
 - [x] Klee
 - [ ] Kujou Sara
 - [ ] Lisa
-- [ ] Mona
+- [x] Mona
 - [ ] Ningguang
 - [ ] Noelle
 - [x] Qiqi
