feat(data): added Hu Tao

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -14,7 +14,7 @@ List of characters that require data gathering (except for story lines)
 - [x] Fischl
 - [x] Ganyu
 - [ ] Gorou
-- [ ] Hu Tao
+- [x] Hu Tao
 - [x] Jean
 - [x] Kaedehara Kazuha
 - [ ] Kaeya
