feat(data): added Kujou Sara

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -22,7 +22,7 @@ List of characters that require data gathering (except for story lines)
 - [x] Kamisato Ayato
 - [x] Keqing
 - [x] Klee
-- [ ] Kujou Sara
+- [x] Kujou Sara
 - [ ] Lisa
 - [x] Mona
 - [ ] Ningguang
