chore(data): updated characters todo

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -1,14 +1,14 @@
 List of characters that require data gathering (except for story lines)
 
-- [ ] Albedo
+- [x] Albedo
 - [ ] Aloy
 - [x] Amber
-- [ ] Arataki Itto
+- [x] Arataki Itto
 - [ ] Barbara
 - [ ] Beidou
 - [ ] Bennett
 - [ ] Chongyun
-- [ ] Diluc
+- [x] Diluc
 - [ ] Diona
 - [x] Eula
 - [x] Fischl
@@ -37,9 +37,9 @@ List of characters that require data gathering (except for story lines)
 - [ ] Sucrose
 - [ ] Tartaglia
 - [ ] Thoma
-- [ ] Venti
+- [x] Venti
 - [ ] Xiangling
-- [ ] Xiao
+- [x] Xiao
 - [ ] Xingqiu
 - [ ] Xinyan
 - [x] Yae Miko
@@ -47,4 +47,4 @@ List of characters that require data gathering (except for story lines)
 - [x] Yelan
 - [x] Yoimiya
 - [ ] Yun Jin
-- [ ] Zhongli
+- [x] Zhongli
