feat(data): added Lisa

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -23,7 +23,7 @@ List of characters that require data gathering (except for story lines)
 - [x] Keqing
 - [x] Klee
 - [x] Kujou Sara
-- [ ] Lisa
+- [x] Lisa
 - [x] Mona
 - [ ] Ningguang
 - [ ] Noelle
