feat(data): added Yun Jin

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -46,5 +46,5 @@ List of characters that require data gathering (except for story lines)
 - [ ] Yanfei
 - [x] Yelan
 - [x] Yoimiya
-- [ ] Yun Jin
+- [x] Yun Jin
 - [x] Zhongli
