feat(data): added Barbara

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -4,7 +4,7 @@ List of characters that require data gathering (except for story lines)
 - [ ] Aloy
 - [x] Amber
 - [x] Arataki Itto
-- [ ] Barbara
+- [x] Barbara
 - [ ] Beidou
 - [ ] Bennett
 - [ ] Chongyun
