feat(data): added Diona

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -9,7 +9,7 @@ List of characters that require data gathering (except for story lines)
 - [ ] Bennett
 - [ ] Chongyun
 - [x] Diluc
-- [ ] Diona
+- [x] Diona
 - [x] Eula
 - [x] Fischl
 - [x] Ganyu
