feat(data): added Yanfei

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -43,7 +43,7 @@ List of characters that require data gathering (except for story lines)
 - [ ] Xingqiu
 - [ ] Xinyan
 - [x] Yae Miko
-- [ ] Yanfei
+- [x] Yanfei
 - [x] Yelan
 - [x] Yoimiya
 - [x] Yun Jin
