chore(characters): marked Sayu in todo

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -32,7 +32,7 @@ List of characters that require data gathering (except for story lines)
 - [ ] Razor
 - [x] Rosaria
 - [x] Sangonomiya Kokomi
-- [ ] Sayu
+- [x] Sayu
 - [x] Shenhe
 - [ ] Sucrose
 - [ ] Tartaglia
