feat(data): added Sucrose

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -34,7 +34,7 @@ List of characters that require data gathering (except for story lines)
 - [x] Sangonomiya Kokomi
 - [x] Sayu
 - [x] Shenhe
-- [ ] Sucrose
+- [x] Sucrose
 - [ ] Tartaglia
 - [ ] Thoma
 - [x] Venti
