--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -29,7 +29,7 @@ List of characters that require data gathering (except for story lines)
 - [ ] Noelle
 - [x] Qiqi
 - [x] Raiden Shogun
-- [ ] Razor
+- [x] Razor
 - [x] Rosaria
 - [x] Sangonomiya Kokomi
 - [x] Sayu
