feat(data): added Kaeya

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -17,7 +17,7 @@ List of characters that require data gathering (except for story lines)
 - [x] Hu Tao
 - [x] Jean
 - [x] Kaedehara Kazuha
-- [ ] Kaeya
+- [x] Kaeya
 - [x] Kamisato Ayaka
 - [x] Kamisato Ayato
 - [x] Keqing
