feat(data): added Gorou

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -13,7 +13,7 @@ List of characters that require data gathering (except for story lines)
 - [x] Eula
 - [x] Fischl
 - [x] Ganyu
-- [ ] Gorou
+- [x] Gorou
 - [x] Hu Tao
 - [x] Jean
 - [x] Kaedehara Kazuha
