--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -26,7 +26,7 @@ List of characters that require data gathering (except for story lines)
 - [x] Lisa
 - [x] Mona
 - [ ] Ningguang
-- [ ] Noelle
+- [x] Noelle
 - [x] Qiqi
 - [x] Raiden Shogun
 - [x] Razor
