chore(characters): marked Tartaglia in todo

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -35,7 +35,7 @@ List of characters that require data gathering (except for story lines)
 - [x] Sayu
 - [x] Shenhe
 - [x] Sucrose
-- [ ] Tartaglia
+- [x] Tartaglia
 - [ ] Thoma
 - [x] Venti
 - [ ] Xiangling
