feat(data): added Ningguang

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -25,7 +25,7 @@ List of characters that require data gathering (except for story lines)
 - [x] Kujou Sara
 - [x] Lisa
 - [x] Mona
-- [ ] Ningguang
+- [x] Ningguang
 - [x] Noelle
 - [x] Qiqi
 - [x] Raiden Shogun
