feat(data): added Thoma

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -36,7 +36,7 @@ List of characters that require data gathering (except for story lines)
 - [x] Shenhe
 - [x] Sucrose
 - [x] Tartaglia
-- [ ] Thoma
+- [x] Thoma
 - [x] Venti
 - [ ] Xiangling
 - [x] Xiao
