feat(data): added Xiangling

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -38,7 +38,7 @@ List of characters that require data gathering (except for story lines)
 - [x] Tartaglia
 - [x] Thoma
 - [x] Venti
-- [ ] Xiangling
+- [x] Xiangling
 - [x] Xiao
 - [ ] Xingqiu
 - [ ] Xinyan
