feat(data): added Xingqiu

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -40,7 +40,7 @@ List of characters that require data gathering (except for story lines)
 - [x] Venti
 - [x] Xiangling
 - [x] Xiao
-- [ ] Xingqiu
+- [x] Xingqiu
 - [ ] Xinyan
 - [x] Yae Miko
 - [x] Yanfei
