feat(data): added Xinyan

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -41,7 +41,7 @@ List of characters that require data gathering (except for story lines)
 - [x] Xiangling
 - [x] Xiao
 - [x] Xingqiu
-- [ ] Xinyan
+- [x] Xinyan
 - [x] Yae Miko
 - [x] Yanfei
 - [x] Yelan
