feat(data): added Bennett

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -6,7 +6,7 @@ List of characters that require data gathering (except for story lines)
 - [x] Arataki Itto
 - [x] Barbara
 - [ ] Beidou
-- [ ] Bennett
+- [x] Bennett
 - [ ] Chongyun
 - [x] Diluc
 - [x] Diona
