feat(data): added Aloy

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -1,7 +1,7 @@
 List of characters that require data gathering (except for story lines)
 
 - [x] Albedo
-- [ ] Aloy
+- [x] Aloy
 - [x] Amber
 - [x] Arataki Itto
 - [x] Barbara
