feat(data): added Chongyun

--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -7,7 +7,7 @@ List of characters that require data gathering (except for story lines)
 - [x] Barbara
 - [ ] Beidou
 - [x] Bennett
-- [ ] Chongyun
+- [x] Chongyun
 - [x] Diluc
 - [x] Diona
 - [x] Eula
