--- a/data/characters/.todo.md
+++ b/data/characters/.todo.md
@@ -5,7 +5,7 @@ List of characters that require data gathering (except for story lines)
 - [x] Amber
 - [x] Arataki Itto
 - [x] Barbara
-- [ ] Beidou
+- [x] Beidou
 - [x] Bennett
 - [x] Chongyun
 - [x] Diluc
