feat(i18n, pages): added translations to 404 page

--- a/locales/en/meta.json
+++ b/locales/en/meta.json
@@ -18,5 +18,8 @@
       "title" : "Guide for {{ name }}",
       "description": "{{ name }} build and playstyle guide"
     }
+  },
+  "404": {
+    "description": "Not found!"
   }
 }
