--- a/locales/ru/meta.json
+++ b/locales/ru/meta.json
@@ -18,5 +18,8 @@
       "title" : "Руководство по {{ name }}",
       "description": "Руководство по прокачке и игре за {{ name }}"
     }
+  },
+  "404": {
+    "description": "Не найдено!"
   }
 }
