feat(components): added settings page to navigation

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -10,6 +10,8 @@
   "calculators": "Calculators",
   "calculators_one": "Calculator",
 
+  "settings": "Settings",
+
   "search-by-name": "Search by name",
   "search-by-title": "Search by title"
 }
