--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -10,6 +10,8 @@
   "calculators": "Калькуляторы",
   "calculators_one": "Калькулятор",
 
+  "settings": "Настройки",
+
   "search-by-name": "Поиск по имени",
   "search-by-title": "Поиск по названию"
 }
