feat(i18n): added contents as a translatable string

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -13,5 +13,7 @@
   "settings": "Settings",
 
   "search-by-name": "Search by name",
-  "search-by-title": "Search by title"
+  "search-by-title": "Search by title",
+
+  "contents": "Contents"
 }
