--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -13,5 +13,7 @@
   "settings": "Настройки",
 
   "search-by-name": "Поиск по имени",
-  "search-by-title": "Поиск по названию"
+  "search-by-title": "Поиск по названию",
+
+  "contents": "Содержание"
 }
