fix(i18n): typo in Russian `yae_miko` name translation

--- a/locales/ru/characters/names.json
+++ b/locales/ru/characters/names.json
@@ -21,7 +21,7 @@
   "tartaglia": "Тарталья",
   "venti": "Венти",
   "xiao": "Сяо",
-  "yae_miko": "Яэ Миок",
+  "yae_miko": "Яэ Мико",
   "yelan": "Е Лань",
   "yoimiya": "Ёимия",
   "zhongli": "Чжун Ли",
