fix(i18n): typo in Russian Keqing translation

--- a/locales/ru/characters/names.json
+++ b/locales/ru/characters/names.json
@@ -11,7 +11,7 @@
   "kaedehara_kazuha": "Каэдэхара Кадзуха",
   "kamisato_ayaka": "Камисато Аяка",
   "kamisato_ayato": "Камисато Аято",
-  "keqing": "Ке Цин",
+  "keqing": "Кэ Цин",
   "klee": "Кли",
   "mona": "Мона",
   "qiqi": "Цици",
