feat(data): added Tighnari

--- a/locales/ru/characters/names.json
+++ b/locales/ru/characters/names.json
@@ -47,5 +47,6 @@
   "xingqiu": "Син Цю",
   "xinyan": "Синь Янь",
   "yanfei": "Янь Фэй",
-  "yun_jin": "Юнь Цзинь"
+  "yun_jin": "Юнь Цзинь",
+  "tighnari": "Тигнари"
 }
