--- a/locales/en/characters/names.json
+++ b/locales/en/characters/names.json
@@ -47,5 +47,6 @@
   "xingqiu": "Xingqiu",
   "xinyan": "Xinyan",
   "yanfei": "Yanfei",
-  "yun_jin": "Yun Jin"
+  "yun_jin": "Yun Jin",
+  "tighnari": "Tighnari"
 }
