feat(data): added Collei

--- a/locales/en/characters/names.json
+++ b/locales/en/characters/names.json
@@ -48,5 +48,6 @@
   "xinyan": "Xinyan",
   "yanfei": "Yanfei",
   "yun_jin": "Yun Jin",
-  "tighnari": "Tighnari"
+  "tighnari": "Tighnari",
+  "collei": "Collei"
 }
