--- a/locales/ru/characters/names.json
+++ b/locales/ru/characters/names.json
@@ -48,5 +48,6 @@
   "xinyan": "Синь Янь",
   "yanfei": "Янь Фэй",
   "yun_jin": "Юнь Цзинь",
-  "tighnari": "Тигнари"
+  "tighnari": "Тигнари",
+  "collei": "Коллеи"
 }
