fix(i18n): missing Noelle name translation

--- a/locales/en/characters/names.json
+++ b/locales/en/characters/names.json
@@ -48,6 +48,7 @@
   "xinyan": "Xinyan",
   "yanfei": "Yanfei",
   "yun_jin": "Yun Jin",
+  "noelle": "Noelle",
   "tighnari": "Tighnari",
   "collei": "Collei"
 }
