--- a/locales/ru/characters/names.json
+++ b/locales/ru/characters/names.json
@@ -48,6 +48,7 @@
   "xinyan": "Синь Янь",
   "yanfei": "Янь Фэй",
   "yun_jin": "Юнь Цзинь",
+  "noelle": "Ноэлль",
   "tighnari": "Тигнари",
   "collei": "Коллеи"
 }
