feat(i18n): translation strings added

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -15,5 +15,7 @@
   "search-by-name": "Search by name",
   "search-by-title": "Search by title",
 
-  "contents": "Contents"
+  "contents": "Contents",
+
+  "read": "Read"
 }
