--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -15,5 +15,7 @@
   "search-by-name": "Поиск по имени",
   "search-by-title": "Поиск по названию",
 
-  "contents": "Содержание"
+  "contents": "Содержание",
+
+  "read": "Читать"
 }
