feat(i18n): even more strings added

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -17,5 +17,8 @@
 
   "contents": "Contents",
 
-  "read": "Read"
+  "read": "Read",
+
+  "birthdays": "Birthdays today",
+  "birthdays-none": "Today there are no birthdays :("
 }
