--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -17,5 +17,8 @@
 
   "contents": "Содержание",
 
-  "read": "Читать"
+  "read": "Читать",
+
+  "birthdays": "Дни рождения сегодня",
+  "birthdays-none": "Сегодня нет дней рождений :("
 }
