--- a/locales/ru/meta.json
+++ b/locales/ru/meta.json
@@ -15,8 +15,8 @@
       "description": "Руководства по прокачке персонажей Genshin Impact и другие руководства."
     },
     "id": {
-      "title" : "Руководство по {{ name }}",
-      "description": "Руководство по прокачке и игре за {{ name }}"
+      "title" : "Руководство по { name }",
+      "description": "Руководство по прокачке и игре за { name }"
     }
   },
   "404": {
