--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -20,5 +20,7 @@
   "read": "Read",
 
   "birthdays": "Birthdays today",
-  "birthdays-none": "Today there are no birthdays :("
+  "birthdays-none": "Today there are no birthdays :(",
+
+  "error-500": "Internal Server Error"
 }
