--- a/locales/ru/calc.json
+++ b/locales/ru/calc.json
@@ -5,7 +5,7 @@
   "cv-details": "Укажите статы вашего артефакта, чтобы выяснить соотношение критов.",
   "cv-cr-placeholder": "Укажите крит шанс здесь",
   "cv-cd-placeholder": "Укажите крит урон тут",
-  "cv-result": "Крит масса",
+  "cv-result": "Крит масса: <colored>{{ result }}</colored>",
   "resin": "Смола",
   "resin-details": "Узнайте в какой момент времени у вас будет необходимое количество смолы.",
   "resin-current-placeholder": "Текущее количество смолы",
