feat(i18n): added tranlsation string

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -9,6 +9,8 @@
 
   "search-by-name": "Search by name",
   "search-by-title": "Search by title",
+  
+  "enter-query": "Enter query...",
 
   "contents": "Contents",
 
