--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -14,6 +14,8 @@
   "search-by-name": "Поиск по имени",
   "search-by-title": "Поиск по названию",
 
+  "enter-query": "Введите запрос...",
+
   "contents": "Содержание",
 
   "read": "Читать",
