feat(i18n): added translation string for website index page

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -24,5 +24,7 @@
   "create-post": "Create Post",
   "logout": "Log Out",
 
+  "latest-post": "Latest Post",
+
   "error-500": "Internal Server Error"
 }
