--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -24,5 +24,7 @@
   "create-post": "Создать публикацию",
   "logout": "Выйти",
 
+  "latest-post": "Последняя публикация",
+
   "error-500": "Внутренняя ошибка сервера"
 }
