--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -19,6 +19,8 @@
 
   "birthdays": "Дни рождения сегодня",
   "birthdays-none": "Сегодня нет дней рождений :(",
+  "bday-wish": "С днём рождения, {name}!",
+  "bday-description": "{name} сегодня празднует своё день рождения! Не забудьте заглянуть в игру и проверить почту!",
   
   "my-profile": "Мой профиль",
   "create-post": "Создать публикацию",
