feat(i18n): mroe translations

--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -28,5 +28,7 @@
 
   "latest-post": "Последняя публикация",
 
+  "view-in-english": "Посмотреть на английском",
+
   "error-500": "Внутренняя ошибка сервера"
 }
