feat(i18n): added mroe translation strings

--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -12,6 +12,9 @@
   "search-by-title": "Поиск по названию",
 
   "enter-query": "Введите запрос...",
+  "query": "Запрос",
+  "language": "Язык",
+  "any": "Любой",
 
   "contents": "Содержание",
 
