--- a/locales/ru/posts.json
+++ b/locales/ru/posts.json
@@ -1,4 +1,5 @@
 {
   "delete-post": "Удалить публикацию",
-  "edit-post": "Отредактировать публикацию"
+  "edit-post": "Отредактировать публикацию",
+  "post-by": "Пост опубликовал(а) <author>{name}</author>"
 }
