feat(i18n): added translation string

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -33,5 +33,6 @@
 
   "view-in-english": "View in English",
 
-  "error-500": "Internal Server Error"
+  "error-500": "Internal Server Error",
+  "files": "Files"
 }
