--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -33,5 +33,6 @@
 
   "view-in-english": "Посмотреть на английском",
 
-  "error-500": "Внутренняя ошибка сервера"
+  "error-500": "Внутренняя ошибка сервера",
+  "files": "Файлы"
 }
