feat: replace old domain with new one

--- a/locales/en/footer.json
+++ b/locales/en/footer.json
@@ -1,4 +1,4 @@
 {
-  "affiliation": "genshin.zenless.club is not affiliated with <officialWebsite>miHoYo</officialWebsite>.",
+  "affiliation": "genshin.academy is not affiliated with <officialWebsite>miHoYo</officialWebsite>.",
   "copyright": "All in-game content is the property of <officialWebsite>miHoYo Co., Ltd.</officialWebsite>"
 }
