--- a/locales/ru/footer.json
+++ b/locales/ru/footer.json
@@ -1,4 +1,4 @@
 {
-  "affiliation": "genshin.zenless.club не связан с <officialWebsite>miHoYo</officialWebsite>.",
+  "affiliation": "genshin.academy не связан с <officialWebsite>miHoYo</officialWebsite>.",
   "copyright": "Внутриигровой контент является собственностью <officialWebsite>miHoYo Co., Ltd.</officialWebsite>"
 }
