feat(i18n): added more strings

--- a/locales/en/posts.json
+++ b/locales/en/posts.json
@@ -1,5 +1,6 @@
 {
   "delete-post": "Delete post",
   "edit-post": "Edit post",
-  "post-by": "The post was published by <author>{name}</author>"
+  "post-by": "The post was published by <author>{name}</author>",
+  "author": "Author"
 }
