--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -35,5 +35,7 @@
   "view-in-english": "Посмотреть на английском",
 
   "error-500": "Внутренняя ошибка сервера",
-  "files": "Файлы"
+  "files": "Файлы",
+  "delete": "Удалить",
+  "edit": "Редактировать"
 }
