--- a/locales/ru/posts.json
+++ b/locales/ru/posts.json
@@ -2,5 +2,7 @@
   "delete-post": "Удалить публикацию",
   "edit-post": "Отредактировать публикацию",
   "post-by": "Пост опубликовал(а) <author>{name}</author>",
-  "author": "Автор"
+  "author": "Автор",
+  "manage-post": "Управление публикацией",
+  "delete-warning": "Вы уверены, что хотите удалить эту публикацию?"
 }
